--- a/slideshow.html
+++ b/slideshow.html
@@ -17,17 +17,17 @@ title: Remembering Johnny
       slide_links       : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
       slides          :   [     
       { image : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
-        title : 'Chillazing in the spa in prescott cropped', 
+        title : '2014-08: Chillaxing in the spa in Prescott', 
         thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         url : ''
       },
       { image : 'johnny/Happy-with-embrie-in-shades-cropped.jpg', 
-        title : 'Happy with embrie in shades cropped', 
+        title : 'Happy with Embrie in shades', 
         thumb : 'johnny/Happy-with-embrie-in-shades-cropped.jpg', 
         url : ''
       },
       { image : 'johnny/Blurry-but-has-the-car-and-the-dog-and-embrie-cropped.jpg', 
-        title : 'Blurry but has the car and the dog and embrie cropped', 
+        title : 'Blurry but has the car and the dog and Embrie', 
         thumb : 'johnny/Blurry-but-has-the-car-and-the-dog-and-embrie-cropped.jpg', 
         url : ''
       },
@@ -37,22 +37,22 @@ title: Remembering Johnny
         url : ''
       },
       { image : 'johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg', 
-        title : 'Relaxing on the patio with embrie cropped', 
+        title : 'Relaxing on the patio with Embrie', 
         thumb : 'johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg', 
         url : ''
       },
       { image : 'johnny/Swimming-with-nudie-embire-cropped.jpg', 
-        title : 'Swimming with nudie embire cropped', 
+        title : 'Swimming with nudie Embire', 
         thumb : 'johnny/Swimming-with-nudie-embire-cropped.jpg', 
         url : ''
       },
       { image : 'johnny/Typical-johnny-stare-cropped.jpg', 
-        title : 'Typical johnny stare cropped', 
+        title : 'Typical Johnny stare', 
         thumb : 'johnny/Typical-johnny-stare-cropped.jpg', 
         url : ''
       },
       { image : 'johnny/Working-on-the-yard-with-embrie.jpg', 
-        title : 'Working on the yard with embrie', 
+        title : 'Working on the yard with Embrie', 
         thumb : 'johnny/Working-on-the-yard-with-embrie.jpg', 
         url : ''
       }
