--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@ title: Remembering Johnny
 ---
 <div id="maximage">
 
-    <img src="johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg" alt="In-the-spa" />
-    <img src="johnny/In-front-of-the-jeep.jpg" alt="shades" data-href="http://www.google.com/" />
-    <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades" data-href="http://www.google.com/" />
-    <img src="johnny/Typical-johnny-stare-cropped.jpg" alt="shades" data-href="http://www.google.com/" />
-    <img src="johnny/Working-on-the-yard-with-embrie.jpg" alt="shades" data-href="http://www.google.com/" />
-
-    <img src="johnny/Happy-with-embrie-in-shades-cropped.jpg" alt="shades" data-href="http://www.google.com/" />
+    <img src="johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg" alt="In-the-spa" />   
+    <h3>Chillazing in the spa in Prescott</h3>
+    <img src="johnny/In-front-of-the-jeep.jpg" alt="shades"/>
+    <h3>In front of the jeep</h3>
+    <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
+    <h3>Relaxing on the patio with Embrie cropped</h3>
+    <img src="johnny/Typical-johnny-stare-cropped.jpg" alt="shades"/>
+    <h3>Typical Johnny stare cropped</h3>
+    <img src="johnny/Working-on-the-yard-with-embrie.jpg" alt="shades"/>
+    <h3>Working on the yard with Embrie</h3>
+    <img src="johnny/Happy-with-embrie-in-shades-cropped.jpg" alt="shades"/>
+    <h3>Happy with Embrie in shades</h3>
     <img src="johnny/Blurry-but-has-the-car-and-the-dog-and-embrie-cropped.jpg" alt="embrie-dog" />
+    <h3>Blurry but has the car and the dog and Embrie</h3>
     <img src="johnny/Swimming-with-nudie-embire-cropped.jpg" alt="swimming" />
+    <h3>Swimming with nudie Embire</h3>
 
-<!--     <div class="video">
-        <img src="lib/images/demo/pattern.jpg" alt="" />
-        <iframe width="100%" height="100%" src="http://www.youtube.com/embed/KVwSP51KVO8?wmode=opaque" frameborder="0" class="youtube-video" allowfullscreen></iframe>
-    </div>
-
-    <img src="lib/images/demo/roof_shooting.jpg" alt="" />
-    <img src="lib/images/demo/man.jpg" alt="" />
-    <img src="lib/images/demo/coffee_shop.jpg" alt="" />
-    <img src="lib/images/demo/gas_station.jpg" alt="" />
- -->
 </div>
 
 <script type="text/javascript" charset="utf-8">
