new images from amada

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@ title: Remembering Johnny
 ---
 <div id="maximage">
 
+<img src="johnny/mas2004-IMG_0935.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0940.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0950.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0951.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0952.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0953.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0955.jpg"/>
+<h3></h3>
+<img src="johnny/mas2004-IMG_0957.jpg"/>
+<h3></h3>
+
     <img src="johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg" alt="In-the-spa" />   
     <h3>Chillazing in the spa in Prescott</h3>
     <img src="johnny/In-front-of-the-jeep.jpg" alt="shades"/>
