--- a/slideshow.html
+++ b/slideshow.html
@@ -21,6 +21,51 @@ title: Remembering Johnny
         thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         url : ''
       },
+
+
+      { image : 'johnny/mas2004-IMG_0935.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0935.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0940.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0940.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0950.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0950.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0951.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0951.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0952.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0952.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0953.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0953.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0955.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0955.jpg', 
+        url : ''
+      },
+      { image : 'johnny/mas2004-IMG_0957.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/mas2004-IMG_0957.jpg', 
+        url : ''
+      },
+
+
+
       { image : 'johnny/Happy-with-embrie-in-shades-cropped.jpg', 
         title : 'Happy with Embrie in shades', 
         thumb : 'johnny/Happy-with-embrie-in-shades-cropped.jpg', 
@@ -55,7 +100,7 @@ title: Remembering Johnny
         title : 'Working on the yard with Embrie', 
         thumb : 'johnny/Working-on-the-yard-with-embrie.jpg', 
         url : ''
-      }
+      },
 
 
       ]
