take down images not of johnny

--- a/slideshow.html
+++ b/slideshow.html
@@ -43,11 +43,6 @@ title: Remembering Johnny
         thumb : 'johnny/mas2004-IMG_0951.jpg', 
         url : ''
       },
-      { image : 'johnny/mas2004-IMG_0952.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0952.jpg', 
-        url : ''
-      },
       { image : 'johnny/mas2004-IMG_0953.jpg', 
         title : 'Best Christmas 2004', 
         thumb : 'johnny/mas2004-IMG_0953.jpg', 
@@ -58,11 +53,18 @@ title: Remembering Johnny
         thumb : 'johnny/mas2004-IMG_0955.jpg', 
         url : ''
       },
-      { image : 'johnny/mas2004-IMG_0957.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0957.jpg', 
-        url : ''
-      },
+
+      
+      // { image : 'johnny/mas2004-IMG_0952.jpg', 
+      //   title : 'Best Christmas 2004', 
+      //   thumb : 'johnny/mas2004-IMG_0952.jpg', 
+      //   url : ''
+      // },
+      // { image : 'johnny/mas2004-IMG_0957.jpg', 
+      //   title : 'Best Christmas 2004', 
+      //   thumb : 'johnny/mas2004-IMG_0957.jpg', 
+      //   url : ''
+      // },
 
 
 
