--- a/slideshow.html
+++ b/slideshow.html
@@ -7,6 +7,8 @@ title: Remembering Johnny
   jQuery(function($){
     
     $.supersized({
+
+      fit_always              :   1, 
     
       // Functionality
       slide_interval          :   5000,   // Length between transitions
