added two more amanda pics

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@ title: Remembering Johnny
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
 <h3>Relaxing on the patio with Embrie cropped</h3>
 
-<img src="johnny/mas2004-IMG_0935.jpg"/>
-<h3></h3>
-<img src="johnny/mas2004-IMG_0940.jpg"/>
-<h3></h3>
-<img src="johnny/mas2004-IMG_0950.jpg"/>
-<h3></h3>
-<img src="johnny/mas2004-IMG_0951.jpg"/>
-<h3></h3>
-<img src="johnny/mas2004-IMG_0953.jpg"/>
-<h3></h3>
-<img src="johnny/mas2004-IMG_0955.jpg"/>
-<h3></h3>
+
+<img src="johnny/amanda/Dancing-at-our-wedding.jpg"/>
+<h3>2007-04 Dancing at out wedding</h3>
+<img src="johnny/amanda/Talking-to-carrie.jpg"/>
+<h3>Talking to Carrie about Obama</h3>
+
+<img src="johnny/amanda/mas2004-IMG_0935.jpg"/>
+<h3>Best Christmas 2004</h3>
+<img src="johnny/amanda/mas2004-IMG_0940.jpg"/>
+<h3>Best Christmas 2004</h3>
+<img src="johnny/amanda/mas2004-IMG_0950.jpg"/>
+<h3>Best Christmas 2004</h3>
+<img src="johnny/amanda/mas2004-IMG_0951.jpg"/>
+<h3>Best Christmas 2004</h3>
+<img src="johnny/amanda/mas2004-IMG_0953.jpg"/>
+<h3>Best Christmas 2004</h3>
+<img src="johnny/amanda/mas2004-IMG_0955.jpg"/>
+<h3>Best Christmas 2004</h3>
 
 
 <!-- 
