--- a/index.html
+++ b/index.html
@@ -9,10 +9,61 @@ title: Remembering Johnny
 <h3>Relaxing on the patio with Embrie cropped</h3>
 
 
+<img src="johnny/scanned/all-this-is-mine.jpg" />
+<h3>all this is mine</h3>
+<img src="johnny/scanned/another-bestie.jpg" />
+<h3>another bestie</h3>
+<img src="johnny/scanned/ashley-and-joan.jpg" />
+<h3>Ashley and Joan</h3>
+<img src="johnny/scanned/bestie.jpg" />
+<h3>bestie</h3>
+<img src="johnny/scanned/doogie-on-a-aligator-in-pool.jpg" />
+<h3>doogie on a aligator in pool</h3>
+<img src="johnny/scanned/doogies-and-sarah.jpg" />
+<h3>doogies and Sarah</h3>
+<img src="johnny/scanned/flower.jpg" />
+<h3>flower</h3>
+<img src="johnny/scanned/hair-in-the-desert.jpg" />
+<h3>hair in the desert</h3>
+<img src="johnny/scanned/is-that-a-parking-garage.jpg" />
+<h3>is that a parking garage?</h3>
+<img src="johnny/scanned/johnny-and-jones.jpg" />
+<h3>Johnny and Jones</h3>
+<img src="johnny/scanned/johnny-in-the-jungle.jpg" />
+<h3>Johnny in the jungle</h3>
+<img src="johnny/scanned/jones-and-grace-and-johnny.jpg" />
+<h3>Jones and Grace and Johnny</h3>
+<img src="johnny/scanned/judy-and-doogies.jpg" />
+<h3>Judy and doogies</h3>
+<img src="johnny/scanned/kissing-the-doogies.jpg" />
+<h3>kissing the doogies</h3>
+<img src="johnny/scanned/mcgee-wedding.jpg" />
+<h3>Mcgee wedding</h3>
+<img src="johnny/scanned/on-the-island.jpg" />
+<h3>on the island</h3>
+<img src="johnny/scanned/sarah-teeth-and-johnny.jpg" />
+<h3>Sarah teeth and Johnny</h3>
+<img src="johnny/scanned/tux-johnny-and-sarah.jpg" />
+<h3>tux Johnny and Sarah</h3>
+<img src="johnny/scanned/with-ashley.jpg" />
+<h3>with Ashley</h3>
+<img src="johnny/scanned/with-judy.jpg" />
+<h3>with Judy</h3>
+<img src="johnny/scanned/with-sarah-at-ganey-big-cactus.jpg" />
+<h3>with Sarah at ganey with big cactus</h3>
+<img src="johnny/scanned/with-sarah-in-pool.jpg" />
+<h3>with Sarah in pool</h3>
+<img src="johnny/scanned/wrestle-sarah.jpg" />
+<h3>wrestle Sarah</h3>
+<img src="johnny/scanned/yellow-shirt-johnny.jpg" />
+<h3>yellow shirt Johnny</h3>
+
+
+
 <img src="johnny/amanda/Dancing-at-our-wedding.jpg"/>
-<h3>2007-04 Dancing at out wedding</h3>
+<h3>2007-04 Dancing at McGee wedding</h3>
 <img src="johnny/amanda/Talking-to-carrie.jpg"/>
-<h3>Talking to Carrie about Obama</h3>
+<h3>Talking to Carrie about Obama at Sheldon's Birthday party (see the lego cake?)</h3>
 
 <img src="johnny/amanda/mas2004-IMG_0935.jpg"/>
 <h3>Best Christmas 2004</h3>
