--- a/slideshow.html
+++ b/slideshow.html
@@ -17,7 +17,8 @@ title: Remembering Johnny
                              
       // Components             
       slide_links       : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
-      slides          :   [     
+      slides          :   [ 
+
       { image : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         title : '2014-08: Chillaxing in the spa in Prescott', 
         thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
@@ -31,38 +32,158 @@ title: Remembering Johnny
       },
 
 
-      { image : 'johnny/mas2004-IMG_0935.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0935.jpg', 
-        url : ''
+      { image : 'johnny/scanned/all-this-is-mine.jpg',
+        title : 'all this is mine',
+        thumb : 'johnny/scanned/all-this-is-mine.jpg',
+        url   : ''
       },
-      { image : 'johnny/mas2004-IMG_0940.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0940.jpg', 
-        url : ''
+      { image : 'johnny/scanned/another-bestie.jpg',
+        title : 'another bestie',
+        thumb : 'johnny/scanned/another-bestie.jpg',
+        url   : ''
       },
-      { image : 'johnny/mas2004-IMG_0950.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0950.jpg', 
-        url : ''
+      { image : 'johnny/scanned/ashley-and-joan.jpg',
+        title : 'ashley and joan',
+        thumb : 'johnny/scanned/ashley-and-joan.jpg',
+        url   : ''
       },
-      { image : 'johnny/mas2004-IMG_0951.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0951.jpg', 
-        url : ''
+      { image : 'johnny/scanned/bestie.jpg',
+        title : 'bestie',
+        thumb : 'johnny/scanned/bestie.jpg',
+        url   : ''
       },
-      { image : 'johnny/mas2004-IMG_0953.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0953.jpg', 
-        url : ''
+      { image : 'johnny/scanned/doogie-on-a-aligator-in-pool.jpg',
+        title : 'doogie on a aligator in pool',
+        thumb : 'johnny/scanned/doogie-on-a-aligator-in-pool.jpg',
+        url   : ''
       },
-      { image : 'johnny/mas2004-IMG_0955.jpg', 
-        title : 'Best Christmas 2004', 
-        thumb : 'johnny/mas2004-IMG_0955.jpg', 
-        url : ''
+      { image : 'johnny/scanned/doogies-and-sarah.jpg',
+        title : 'doogies and sarah',
+        thumb : 'johnny/scanned/doogies-and-sarah.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/flower.jpg',
+        title : 'flower',
+        thumb : 'johnny/scanned/flower.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/hair-in-the-desert.jpg',
+        title : 'hair in the desert',
+        thumb : 'johnny/scanned/hair-in-the-desert.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/is-that-a-parking-garage.jpg',
+        title : 'is that a parking garage',
+        thumb : 'johnny/scanned/is-that-a-parking-garage.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/johnny-and-jones.jpg',
+        title : 'johnny and jones',
+        thumb : 'johnny/scanned/johnny-and-jones.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/johnny-in-the-jungle.jpg',
+        title : 'johnny in the jungle',
+        thumb : 'johnny/scanned/johnny-in-the-jungle.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/jones-and-grace-and-johnny.jpg',
+        title : 'jones and grace and johnny',
+        thumb : 'johnny/scanned/jones-and-grace-and-johnny.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/judy-and-doogies.jpg',
+        title : 'judy and doogies',
+        thumb : 'johnny/scanned/judy-and-doogies.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/kissing-the-doogies.jpg',
+        title : 'kissing the doogies',
+        thumb : 'johnny/scanned/kissing-the-doogies.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/mcgee-wedding.jpg',
+        title : 'mcgee wedding',
+        thumb : 'johnny/scanned/mcgee-wedding.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/on-the-island.jpg',
+        title : 'on the island',
+        thumb : 'johnny/scanned/on-the-island.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/sarah-teeth-and-johnny.jpg',
+        title : 'sarah teeth and johnny',
+        thumb : 'johnny/scanned/sarah-teeth-and-johnny.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/tux-johnny-and-sarah.jpg',
+        title : 'tux johnny and sarah',
+        thumb : 'johnny/scanned/tux-johnny-and-sarah.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/with-ashley.jpg',
+        title : 'with ashley',
+        thumb : 'johnny/scanned/with-ashley.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/with-judy.jpg',
+        title : 'with judy',
+        thumb : 'johnny/scanned/with-judy.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/with-sarah-at-ganey-big-cactus.jpg',
+        title : 'with sarah at ganey big cactus',
+        thumb : 'johnny/scanned/with-sarah-at-ganey-big-cactus.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/with-sarah-in-pool.jpg',
+        title : 'with sarah in pool',
+        thumb : 'johnny/scanned/with-sarah-in-pool.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/wrestle-sarah.jpg',
+        title : 'wrestle sarah',
+        thumb : 'johnny/scanned/wrestle-sarah.jpg',
+        url   : ''
+      },
+      { image : 'johnny/scanned/yellow-shirt-johnny.jpg',
+        title : 'yellow shirt johnny',
+        thumb : 'johnny/scanned/yellow-shirt-johnny.jpg',
+        url   : ''
       },
 
 
+      { image : 'johnny/amanda/mas2004-IMG_0935.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0935.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/mas2004-IMG_0940.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0940.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/mas2004-IMG_0950.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0950.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/mas2004-IMG_0951.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0951.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/mas2004-IMG_0953.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0953.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/mas2004-IMG_0955.jpg', 
+        title : 'Best Christmas 2004', 
+        thumb : 'johnny/amanda/mas2004-IMG_0955.jpg', 
+        url : ''
+      },
       // { image : 'johnny/mas2004-IMG_0952.jpg', 
       //   title : 'Best Christmas 2004', 
       //   thumb : 'johnny/mas2004-IMG_0952.jpg', 
@@ -73,6 +194,19 @@ title: Remembering Johnny
       //   thumb : 'johnny/mas2004-IMG_0957.jpg', 
       //   url : ''
       // },
+
+
+      { image : 'johnny/amanda/Dancing-at-our-wedding.jpg', 
+        title : '2007-04 Dancing at McGee wedding', 
+        thumb : 'johnny/amanda/Dancing-at-our-wedding.jpg', 
+        url : ''
+      },
+      { image : 'johnny/amanda/Talking-to-carrie.jpg', 
+        title : 'Talking to Carrie about Obama at Sheldon\'s Birthday party (see the lego cake?)', 
+        thumb : 'johnny/amanda/Talking-to-carrie.jpg', 
+        url : ''
+      },
+
 
 
 
