added those last 4 from Joans email

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@ title: Remembering Johnny
 <h3>Relaxing on the patio with Embrie cropped</h3>
 
 
+<img src="johnny/joan-email/johnny-in-white.jpg" />
+<h3>Johnny in White</h3>
+<img src="johnny/joan-email/johnny-jones-john.jpg" />
+<h3>Johnny Jones John</h3>
+<img src="johnny/joan-email/johnny-profile.jpg" />
+<h3>Johnny profile</h3>
+<img src="johnny/joan-email/young-johnny.jpg" />
+<h3>Young Johnny</h3>
+
 <img src="johnny/scanned/all-this-is-mine.jpg" />
 <h3>all this is mine</h3>
 <img src="johnny/scanned/another-bestie.jpg" />
