--- a/slideshow.html
+++ b/slideshow.html
@@ -31,6 +31,26 @@ title: Remembering Johnny
         url : ''
       },
 
+      { image : 'johnny/joan-email/johnny-in-white.jpg',
+        title : 'Johnny in white',
+        thumb : 'johnny/joan-email/johnny-in-white.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/joan-email/johnny-jones-john.jpg',
+        title : 'Johnny, Jones, John',
+        thumb : 'johnny/joan-email/johnny-jones-john.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/joan-email/johnny-profile.jpg',
+        title : 'Johnny profile',
+        thumb : 'johnny/joan-email/johnny-profile.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/joan-email/young-johnny.jpg',
+        title : 'Young Johnny',
+        thumb : 'johnny/joan-email/young-johnny.jpg',
+        url   : ''
+      }, 
 
       { image : 'johnny/scanned/all-this-is-mine.jpg',
         title : 'all this is mine',
