no dots on slideshow and the pink bg is gone

--- a/slideshow.html
+++ b/slideshow.html
@@ -306,7 +306,6 @@ title: Remembering Johnny
     <a id="tray-button"><img id="tray-arrow" src="img/button-tray-up.png"/></a>
     
     <!--Navigation-->
-    <ul id="slide-list"></ul>
-    
+    <!--     <ul id="slide-list"></ul>  -->    
   </div>
 </div>
