added chris photos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@ title: Remembering Johnny
 <h3>Relaxing on the patio with Embrie cropped</h3>
 
 
+<img src="johnny/chris/photo1.jpg" />
+<h3>Chris 1</h3>
+<img src="johnny/chris/photo2.jpg" />
+<h3>Chris 2</h3>
+<img src="johnny/chris/photo3.jpg" />
+<h3>Chris 3</h3>
+<img src="johnny/chris/photo4.jpg" />
+<h3>Chris 4</h3>
+<img src="johnny/chris/photo5.jpg" />
+<h3>Chris 5</h3>
+<img src="johnny/chris/photo6.jpg" />
+<h3>Chris 6</h3>
+<img src="johnny/chris/photo7.jpg" />
+<h3>Chris 7</h3>
+
 <img src="johnny/joan-email/johnny-in-white.jpg" />
 <h3>Johnny in White</h3>
 <img src="johnny/joan-email/johnny-jones-john.jpg" />
