--- a/slideshow.html
+++ b/slideshow.html
@@ -31,6 +31,43 @@ title: Remembering Johnny
         url : ''
       },
 
+      { image : 'johnny/chris/photo1.jpg',
+        title : 'Chris 1',
+        thumb : 'johnny/chris/photo1.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo2.jpg',
+        title : 'Chris 2',
+        thumb : 'johnny/chris/photo2.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo3.jpg',
+        title : 'Chris 3',
+        thumb : 'johnny/chris/photo3.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo4.jpg',
+        title : 'Chris 4',
+        thumb : 'johnny/chris/photo4.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo5.jpg',
+        title : 'Chris 5',
+        thumb : 'johnny/chris/photo5.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo6.jpg',
+        title : 'Chris 6',
+        thumb : 'johnny/chris/photo6.jpg',
+        url   : ''
+      }, 
+      { image : 'johnny/chris/photo7.jpg',
+        title : 'Chris 7',
+        thumb : 'johnny/chris/photo7.jpg',
+        url   : ''
+      }, 
+
+
       { image : 'johnny/joan-email/johnny-in-white.jpg',
         title : 'Johnny in white',
         thumb : 'johnny/joan-email/johnny-in-white.jpg',
