took out cropped

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Remembering Johnny
 
 
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
-<h3>Relaxing on the patio with Embrie cropped</h3>
+<h3>Relaxing on the patio with Embrie</h3>
 
 
 <img src="johnny/chris/photo1.jpg" />
@@ -114,7 +114,7 @@ title: Remembering Johnny
     <img src="johnny/In-front-of-the-jeep.jpg" alt="shades"/>
     <h3>In front of the jeep</h3>
     <img src="johnny/Typical-johnny-stare-cropped.jpg" alt="shades"/>
-    <h3>Typical Johnny stare cropped</h3>
+    <h3>Typical Johnny stare</h3>
     <img src="johnny/Working-on-the-yard-with-embrie.jpg" alt="shades"/>
     <h3>Working on the yard with Embrie</h3>
     <img src="johnny/Happy-with-embrie-in-shades-cropped.jpg" alt="shades"/>
@@ -125,6 +125,7 @@ title: Remembering Johnny
     <h3>Swimming with nudie Embire</h3>
 
 </div>
+
 
 <script type="text/javascript" charset="utf-8">
 $(function(){
