--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Remembering Johnny
 
 
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
-<h3>Relaxing on the patio with Embrie</h3>
+<h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
 
 <img src="johnny/chris/photo1.jpg" />
