new slides and a new bw image of younger johnny

--- a/memorial.html
+++ b/memorial.html
@@ -5,13 +5,13 @@ title: Memorial
 <div id="maximage">
 
 
-<img src="johnny/memorial/Johnny.Celaire.001.jpg"/>
+<img src="johnny/memorial/slide1.png"/>
 <h3>Page 1</h3>
 
-<img src="johnny/memorial/Johnny.Celaire.002.jpg"/>
+<img src="johnny/memorial/slide2.png"/>
 <h3>Page 2</h3>
 
-<img src="johnny/memorial/Johnny.Celaire.003.jpg"/>
+<img src="johnny/memorial/slide3.png"/>
 <h3>Page 3</h3>
 
 </div>
