--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ title: Remembering Johnny
 <h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
 
+<img src="johnny/black-and-white/portrait-receding-hairline.jpg" />
+<h3>Portrait with receding hairline</h3>
+
+
 <img src="johnny/chris/photo1.jpg" />
 <h3>Chris 1</h3>
 <img src="johnny/chris/photo2.jpg" />
