fixed broken stuff

--- a/memorial.html
+++ b/memorial.html
@@ -5,7 +5,7 @@ title: Memorial
 <div id="maximage">
 
 
-<img src="johnny/memorial/slide1.png"/>
+<img src="johnny/memorial/slide.png"/>
 <h3>Page 1</h3>
 
 <img src="johnny/memorial/slide2.png"/>
