--- a/slideshow.html
+++ b/slideshow.html
@@ -31,6 +31,12 @@ title: Remembering Johnny
         url : ''
       },
 
+      { image : 'johnny/black-and-white/portrait-receding-hairline.jpg', 
+        title : 'Portrait with receding hairline', 
+        thumb : 'johnny/black-and-white/portrait-receding-hairline.jpg', 
+        url : ''
+      },
+
       { image : 'johnny/chris/photo1.jpg',
         title : 'Chris 1',
         thumb : 'johnny/chris/photo1.jpg',
