added white suit johnny

--- a/slideshow.html
+++ b/slideshow.html
@@ -19,6 +19,8 @@ title: Remembering Johnny
       slide_links       : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
       slides          :   [ 
 
+
+
       { image : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         title : '2014-08: Chillaxing in the spa in Prescott', 
         thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
@@ -30,6 +32,14 @@ title: Remembering Johnny
         thumb : 'johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg', 
         url : ''
       },
+
+      { image : 'johnny/neil/johnny-white-coat.jpg', 
+        title : 'White suit jacket', 
+        thumb : 'johnny/neil/johnny-white-coat.jpg', 
+        url : ''
+      },
+
+
 
       { image : 'johnny/black-and-white/portrait-receding-hairline.jpg', 
         title : 'Portrait with receding hairline', 
