--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ title: Remembering Johnny
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
 <h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
+<img src="johnny/neil/johnny-white-coat.jpg" />
+<h3>White suit jacket</h3>
+
 
 <img src="johnny/black-and-white/portrait-receding-hairline.jpg" />
 <h3>Portrait with receding hairline</h3>
