added videos and a few images

--- a/slideshow.html
+++ b/slideshow.html
@@ -21,11 +21,24 @@ title: Remembering Johnny
 
 
 
+      { image : 'johnny/2013-08-walking-on-beach.jpg', 
+        title : '2013-08 Walking on the beach', 
+        thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
+        url : ''
+      },
+
+      { image : 'johnny/2014-08-johnny-beamer-garage.jpg', 
+        title : '2014-08 Johnny with Beamer in Garage', 
+        thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
+        url : ''
+      },
+
       { image : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         title : '2014-08: Chillaxing in the spa in Prescott', 
         thumb : 'johnny/Chillazing-in-the-spa-in-prescott-cropped.jpg', 
         url : ''
       },
+
 
       { image : 'johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg', 
         title : 'Relaxing on the patio with Embrie', 
