--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@ title: Remembering Johnny
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
 <h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
+<iframe width="420" height="315" src="https://www.youtube.com/embed/Y99RCeYS3aU" frameborder="0" allowfullscreen></iframe>
+
+<img src="johnny/2013-08-walking-on-beach.jpg" />
+<h3>2013-08 Walking on the beach</h3>
+
+<img src="johnny/2014-08-johnny-beamer-garage.jpg" />
+<h3>2014-08 Johnny with Beamer in Garage</h3>
+
 <img src="johnny/neil/johnny-white-coat.jpg" />
 <h3>White suit jacket</h3>
-
 
 <img src="johnny/black-and-white/portrait-receding-hairline.jpg" />
 <h3>Portrait with receding hairline</h3>
