added videos and a few images2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ title: Remembering Johnny
 <h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
 <iframe width="420" height="315" src="https://www.youtube.com/embed/Y99RCeYS3aU" frameborder="0" allowfullscreen></iframe>
+<h3>Golfing</h3>
+
 
 <img src="johnny/2013-08-walking-on-beach.jpg" />
 <h3>2013-08 Walking on the beach</h3>
