--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: Remembering Johnny
 <img src="johnny/Relaxing-on-the-patio-with-embrie-cropped.jpg" alt="shades"/>
 <h3>RIP Johnny. This is how I'll always remember you. --Sheldon</h3>
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/Y99RCeYS3aU" frameborder="0" allowfullscreen></iframe>
+<iframe width="710" height="533" src="https://www.youtube.com/embed/Y99RCeYS3aU?rel=0" frameborder="0" allowfullscreen></iframe>
+
 <h3>Golfing</h3>
 
 
