--- a/memorial.html
+++ b/memorial.html
@@ -4,7 +4,8 @@ title: Memorial
 ---
 <div id="maximage">
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/hOWrWO5ZEjA" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="710" height="399" src="https://www.youtube.com/embed/hOWrWO5ZEjA?rel=0" frameborder="0" allowfullscreen></iframe>
 
 
 <img src="johnny/memorial/slide.png"/>
