fixed video sizes2

--- a/memorial.html
+++ b/memorial.html
@@ -6,6 +6,7 @@ title: Memorial
 
 
 <iframe width="710" height="399" src="https://www.youtube.com/embed/hOWrWO5ZEjA?rel=0" frameborder="0" allowfullscreen></iframe>
+<h3>Memorial Video</h3>
 
 
 <img src="johnny/memorial/slide.png"/>
